# Mail-Fi

./: AVAILEXUS_CURRENT_STATUS.md  AVAILEXUS_INTEGRATION_ERRORS.md  AVAILEXUS_TECHNICAL_GUIDE.md  AVAIL_FEEDBACK.md  BLOCKSCOUT_INTEGRATION.md  MAGIC_INTEGRATION.md  NEXUS_FIX.md  README.md  next.config.ts  package-lock.json  package.json
contracts/: Lend.sol  LimitOrder.sol  Mailvault.sol  USDC_InvestmentEscrow.sol  YieldFarmingContract.sol
mail-fi/: Anchor.toml  DEPLOY_CONTRACTS.md  README.md  SIMPLE_BUILD_SOLUTION.md  package-lock.json  package.json
mail-fi-backend/: README.md  SETUP_WALLET.md  package-lock.json  package.json
mail-fi/programs/mail-fi-contracts/: Cargo.toml  README.md
mail-fi/programs/mail-fi-contracts/src/: escrow.rs  lib.rs  multisig.rs  recurring_payment.rs
pyusd-manifesto/: .gitignore  ALL_FIXES_COMPLETE.md  ALTERNATIVE_INSTALL.md  Anchor.toml  BUILD_AND_DEPLOY.md  BUILD_SOLUTION.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  EMAIL_SETUP.md  FINAL_DEPLOYMENT_STEPS.md  FIXES_APPLIED.md  IMPLEMENTATION_PLAN.txt  IMPLEMENTATION_STATUS.md  PHANTOM_WALLET_TESTING.md  QUICK_FIX.md  README.md  RENAME_SUMMARY.md  RUN_THIS_IN_CMD.bat  STAKING_FEATURE.md  TEST_INSTRUCTIONS.md  cargo-wrapper.sh  deploy-contracts.bat  deploy-final.bat  deploy.sh  install-and-deploy.bat  install-solana.bat  next.config.js  package-lock.json  package.json
pyusd-manifesto/programs/pyusd-manifesto-contracts/: Cargo.lock.override  Cargo.toml
pyusd-manifesto/programs/pyusd-manifesto-contracts/src/: escrow.rs  lib.rs  multisig.rs  recurring.rs  recurring_payment.rs  staking.rs  yield_farming.rs
scripts/: build-extension.ts  build-nexus-umd.js  nexus-umd-entry.js
src/app/: page.tsx  (+2 more)
(+494 files in other folders)
