[package]
name = "pyusd-manifesto-contracts"
version = "0.1.0"
description = "Smart contracts for PYUSD Manifesto payment platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyusd_manifesto_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
