
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.0"
solana-program = "~1.18.0"
spl-token = "4.0.0"
spl-token-2022 = "1.0.0"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"

[lib]
name = "pyusd_manifesto_contracts"
crate-type = ["cdylib", "lib"]
